yacc_related/cal3_working/vars.y
%{
#include <iostream>
#include <string>
#include <map>
#include<bits/stdc++.h>
using namespace std;
static std::map<std::string, int> vars;

int yylex(void);
 void yyerror (char const *s) {
   fprintf (stderr, "%s\n", s);
 }

%}
 
%union { int i; std::string *s; }
 
%token BATATA
%token<i> INT
%token<s> VAR
%type<i> expr
 
%right '='
%left '+' '-'
%left '*' '/' '%'
%right BATATA
 
%%
 
list: stmt
    | list stmt
    ;
 
stmt: expr ','
    | expr ':'          { std::cout << $1 << std::endl; }
    ;
 
expr: INT               { $$ = $1; }
    | VAR               { $$ = vars[*$1];      delete $1; }
    | VAR '=' expr      { $$ = vars[*$1] = $3; delete $1; }
    | expr '+' expr     { $$ = $1 + $3; }
    | expr '-' expr     { $$ = $1 - $3; }
    | expr '*' expr     { $$ = $1 * $3; }
    | expr '/' expr     { $$ = $1 / $3; }
    | expr '%' expr     { $$ = $1 % $3; }
    | '+' expr  %prec BATATA    { $$ =  $2; }
    | '-' expr  %prec BATATA    { $$ = -$2; }
    | '(' expr ')'              { $$ =  $2; }
    ;
 
%%
extern int yylex();
extern int yyparse();
void yyerror(char *s) { std::cout << s << std::endl; }
int main() { yyparse(); }
